# imglaze

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20210716112952_create_config.up.sql  20210716113640_create_users.up.sql  20210716114341_create_overlays.down.sql  20210716114341_create_overlays.up.sql  20210716210138_overlay_uidx.down.sql  20210716210138_overlay_uidx.up.sql  20210718154601_overlay_user_uidx.down.sql  20210718154601_overlay_user_uidx.up.sql  20210718185209_persistent_image.down.sql  20210718185209_persistent_image.up.sql  20210719135515_image_proxy_storage.down.sql  20210719135515_image_proxy_storage.up.sql
overlay/: .eslintrc.js  .prettierrc  package-lock.json  package.json  tsconfig.json
overlay/src/: index.css  index.html  index.ts  reconnecting-websocket.ts
setup/: Cargo.toml
src/: constants.rs  main.rs
src/actors/: mod.rs
src/actors/db/: messages.rs  mod.rs
src/actors/irc/: messages.rs  mod.rs  token_storage.rs
src/actors/overlay/: messages.rs  mod.rs
src/actors/token/: mod.rs
src/actors/ws/: mod.rs
src/errors/: mod.rs  redirect_error.rs  sql.rs
src/extractors/: jwt.rs
src/models/: config.rs  mod.rs  overlay.rs  users.rs
src/repositories/: auth.rs  mod.rs  overlay.rs  ws.rs
src/services/: chat.rs  images.rs  jwt.rs  metrics.rs  mod.rs
src/services/ivr/: mod.rs  requests.rs  types.rs
src/services/twitch/: errors.rs
web/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  index.html  index.tsx
web/src/api/: ApiClient.ts  BaseClient.ts  types.ts
web/src/components/: AddOverlay.tsx  Overlay.tsx
web/src/context/: Api.ts
web/src/views/: Dashboard.tsx  Login.tsx
(+11 files in other folders)
