[package]
name = "imglaze"
version = "0.1.0"
edition = "2018"

[workspace]
members = [".", "setup"]

[dependencies]
sqlx = { version = "0.5.5", features = ["json", "postgres", "macros", "runtime-actix-native-tls"] }
deadpool-postgres = "0.9.0"

actix = "0.12.0"
actix-web = "4.0.0-beta.8"
actix-files = "0.6.0-beta.6"
actix-cors = "0.6.0-beta.2"
actix-web-actors = "4.0.0-beta.6"

twitch-irc = { version = "3.0.1", features = ["refreshing-token", "transport-tcp-native-tls"] }
twitch_api2 = { version = "0.6.0-rc.1", features = ["helix", "twitch_oauth2", "reqwest_client"] }
reqwest = "0.11.4"

futures = "0.3.15"
tokio = { version = "1.8.1", features = ["sync"] }
tokio-stream = "0.1.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8.4"

anyhow = "1.0.42"
derive_more = "0.99.16"
paste = "1.0.5"
async-trait = "0.1.50"
itertools = "0.10.1"
lazy_static = "1.4.0"

log = "0.4.14"
env_logger = "0.9.0"

jsonwebtoken = "7.2.0"

time = "0.2"
rand = { version = "0.8.4" }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
urlencoding = "2.0.0"
url = "2.2.2"

# see https://github.com/tkaitchuck/aHash/issues/95#issuecomment-874150078
indexmap = "=1.6.2"